force-app/main/default/objects/BudgetCategory/BudgetCategory.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>