force-app/main/default/objects/BudgetCategory/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <inlineHelpText>This is the actual amount allocated and spend via the Financial Activity Cost Category Details that have been approved.</inlineHelpText>
    <label>Actual Amount</label>
    <summarizedField>BudgetCategoryValue.ActualAmount</summarizedField>
    <summaryForeignKey>BudgetCategoryValue.BudgetCategoryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>