force-app/main/default/objects/BudgetCategory/fields/Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount__c</fullName>
    <inlineHelpText>This is a sum of the available amount on all the Budget Category Detail.</inlineHelpText>
    <label>Available Amount</label>
    <summarizedField>BudgetCategoryValue.Available_Amount__c</summarizedField>
    <summaryForeignKey>BudgetCategoryValue.BudgetCategoryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>