force-app/main/default/objects/BudgetCategory/fields/Budget_Category_Details_to_Create__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category_Details_to_Create__c</fullName>
    <label>Budget Category Details to Create</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>