force-app/main/default/objects/BudgetCategory/fields/Budget_is_Template__c.field-meta.xml
<CustomField>
    <fullName>Budget_is_Template__c</fullName>
    <formula>Budget.Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget is Template?</label>
    <type>Checkbox</type>
</CustomField>