force-app/main/default/objects/BudgetCategory/fields/Can_Add_More_Details__c.field-meta.xml
<CustomField>
    <fullName>Can_Add_More_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will allow Budget Category Details to be added through the LWC. This setting controls the rendering of the LWC</description>
    <label>Can Add More Details?</label>
    <type>Checkbox</type>
</CustomField>