force-app/main/default/objects/BudgetCategory/fields/Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Amount__c</fullName>
    <description>Displays the combined total of funds already disbursed, currently pending disbursement, and any prior disbursed amounts.</description>
    <inlineHelpText>This is the actual amount allocated and spend via the Financial Activity Cost Category Details that have been already disbursed or currently pending disbursement.</inlineHelpText>
    <label>Disbursed Amount</label>
    <summarizedField>BudgetCategoryValue.Disbursed_Amount__c</summarizedField>
    <summaryForeignKey>BudgetCategoryValue.BudgetCategoryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>