force-app/main/default/objects/BudgetCategory/fields/Expenditure_Category__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Or Eligible Category</inlineHelpText>
    <label>Expenditure_Category</label>
    <referenceTo>Reference_Category__c</referenceTo>
    <relationshipLabel>Budget Categories</relationshipLabel>
    <relationshipName>Budget_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>