force-app/main/default/objects/BudgetCategory/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Number</label>
    <referenceTo>ItemNumber__c</referenceTo>
    <relationshipLabel>Budget Categories</relationshipLabel>
    <relationshipName>Budget_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>