force-app/main/default/objects/BudgetCategory/fields/ItemNumberDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemNumberDescription__c</fullName>
    <formula>ItemNumber__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Number Description</label>
    <type>Text</type>
</CustomField>