force-app/main/default/objects/BudgetCategory/fields/Minimum_Details__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Details__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Minimum Details</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>