force-app/main/default/objects/BudgetCategory/fields/Other_Funding__c.field-meta.xml
<CustomField>
    <fullName>Other_Funding__c</fullName>
    <label>Other Funding</label>
    <summarizedField>BudgetCategoryValue.Other_Funding__c</summarizedField>
    <summaryForeignKey>BudgetCategoryValue.BudgetCategoryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>