force-app/main/default/objects/BudgetCategory/fields/Read_Only_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Detail_Fields__c</fullName>
    <description>Will prevent field from being modified in the budget table LWC.
This can be used for records where you need predefined values in some columns

Comma separated List
Example:
Field1,Field2</description>
    <label>Read Only Detail Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>