force-app/main/default/objects/BudgetCategory/fields/Total_Activity_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Activity_Budget__c</fullName>
    <formula>Total_Amount__c  +  Other_Funding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Activity Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>