force-app/main/default/objects/BudgetCategory/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <inlineHelpText>Total amount of all the details of this category</inlineHelpText>
    <label>Proposed Grant Amount</label>
    <summarizedField>BudgetCategoryValue.Amount</summarizedField>
    <summaryForeignKey>BudgetCategoryValue.BudgetCategoryId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>